* Name.domain_name_to_string has been renamed to Name.to_string
* Name.string_to_domain_name has been deprecated for Name.of_string
* Name.parse_name has been renamed to Name.parse
* Name.marshal_name has been renamed to Name.marshal
* Name.hashcons_charstring has been renamed to Name.hashcons_string
* Name.hashcons_domainname has been renamed to Name.hashcons
* Name.for_reverse has been replaced by Name.of_ipaddr
* Name.of_ipaddr accepts a Ipaddr.t and produces a name suitable for reverse DNS
* We now require >= ipaddr.2.6.0 to support Name.of_ipaddr

0.14.1 (2015-03-29):
* Reduce namespace pollution in `name.ml` to avoid breaking with Cstruct 1.6.0+.
* Add a `Dns_server.compose` function to make it easier to build resolution pipelines (#58).
* Add a `Dns_server_mirage` functor (#55).
* Add `Dns_resolver.resolve_pkt` to support custom query packets (#49).
* Split out the experimental Async_resolver into a `Async_kernel` and Unix libraries.
  This introduces the `dns.async-unix` library.
 
0.14.0 (2015-01-29):
* Renamed `Packet.QM` to `Packet.Q_Normal` and `QU` to `Q_mDNS_Unicast` for
  clarity and added more detailed doc comments. Added constructor function
  `Packet.make_question` for convenience. (#41)
* Support `io-page` 1.3.0+ interface. (#40)

0.13.0 (2015-01-26):
* Add support for multicast DNS (RFC6762) in the trie. (#35 from Luke Dunstan)
  * mDNS doesn't use SOA nor delegation (RFC 6762 section 12), so some minor changes
    to Trie are required to handle this.
  * mDNS doesn't echo the questions in the response (RFC 6762 section 6), except
    in legacy mode, so a `bool` argument was added to `Query.response_of_answer`.
  * `Query.answer` still exists but now `Query.answer_multiple` is also available
    for answering multiple questions in one query to produce a single answer 
    (RFC 6762 section 5.3). One caveat is that responses may exceed the maximum
    message length, but that is not really specific to mDNS. Also, in theory multiple