@@ -6,6 +6,7 @@
 * Name.marshal_name has been renamed to Name.marshal
 * Name.hashcons_charstring has been renamed to Name.hashcons_string
 * Name.hashcons_domainname has been renamed to Name.hashcons
+* Name.canon2key has been renamed to Name.to_key
 * Name.for_reverse has been replaced by Name.of_ipaddr
 * Name.of_ipaddr accepts a Ipaddr.t and produces a name suitable for reverse DNS
 * We now require >= ipaddr.2.6.0 to support Name.of_ipaddr
